# django-rest-framework-boilerplate

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  README.md  compose.yaml  config.env.example  config.yaml.example  docker-compose.yaml  make.py  make.sh  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: code-check.env  code-check.yaml  example_config.env  lint-and-test.yaml  lint.yaml  run-tests.yaml
app/: pyproject.toml
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/core/: admin.py  exceptions.py  openapi.py  urls.py  views.py
app/core/app_template/: admin.py-tpl  apps.py-tpl  models.py-tpl  serializers.py-tpl  urls.py-tpl  views.py-tpl
app/core/exceptions/: exception_handler.py  formatter.py
app/core/extensions/: README.md  admin.py  fields.py  logging.py  models.py  utils.py  widgets.py
app/core/extensions/admin/: __init__.py  uneditable_fixed_inline.py
app/core/extensions/fields/: __init__.py  svg_field.py
app/core/extensions/models/: BaseAbstractModel.py  __init__.py  base_abstract_model.py
app/core/extensions/widgets/: ImagePreviewWidget.py  __init__.py  image_preview_widget.py
app/core/management/commands/: _base_command.py  setup.py  startapp.py  wait_for_db.py
app/core/migrations/: load_admin.py
app/core/templates/admin/: base.html  fixed_tabular_inline.html
app/core/templates/rest_framework/: api.html
app/core/tests/: __init__.py  test_api.py  test_commands.py  test_exceptions.py  test_extensions.py  test_migrations.py  test_settings.py  test_utilities.py  test_views.py  utils.py
app/core/utilities/: __init__.py  env.py  logging.py  test.py  types.py
app/extensions/: admin.py  serializers.py
app/extensions/models/: __init__.py  base.py  managers.py  mixins.py
app/extensions/tests/: example.txt  test_mixins.py  test_serializers.py  test_utilities.py
app/extensions/utilities/: __init__.py  env.py  test.py  types.py
app/users/: abstract_models.py  admin.py  apps.py  authentication.py  backends.py  managers.py  mixins.py  models.py  serializers.py  urls.py  view_mixins.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: __init__.py  test_abstract_models.py  test_jwt.py  test_managers.py  test_models.py  test_views.py
cli/: __init__.py  config.py  docker.py  files.py  pyproject.toml  update.py
cli/src/: config.py  diff3.py  docker_wrapper.py  files.py  logging.py  options.py  update.py
docker/: .env.example  common-services.yml  config.env.example
docker/dev/: Dockerfile  Dockerfile.dev  Dockerfile.test  compose.yml  docker-entrypoint.sh
docker/prod/: Dockerfile  compose.yml  docker-entrypoint.sh  nginx.conf  nginx.conf.template  supervisord.ini
docs/: README.md  boilerplate_CHANGELOG.md
requirements/: boilerplate.dev.requirements.txt  boilerplate.requirements.txt  dev.requirements.txt  requirements.txt
stubs/: README.md
stubs/rest_framework_simplejwt/token_blacklist/: models.pyi
typing/: README.md
