[project]
name = "Django-Rest-Framework-Boilerplate"
version = "0.0.1"
requires-python = "== 3.13.2"
readme = "README.md"


[tool.ruff]
exclude=[
    "app/**/migrations/[0-9][0-9][0-9][0-9]_*.py",
    "app/manage.py",
]
line-length = 119

[tool.ruff.lint]
select = ["F", "I", "B"]

[tool.ruff.lint.isort]
extra-standard-library = ["requests"]
section-order = [
    "future",
    "standard-library",
    "django",
    "addons",
    "third-party",
    "first-party",
    "local-folder",
]
no-lines-before = [
    "future",
    "standard-library",
    "django",
    "addons",
    "third-party",
    "first-party",
    "local-folder",
]

lines-after-imports = 2
lines-between-types = 0
known-first-party = [
    "extensions",
    "core",
    "users",
    # ADD OTHERS HERE
]

[tool.ruff.lint.isort.sections]
django = ["django", "rest_framework"]
addons = ["rest_framework_simplejwt", "drf_spectacular", "drf_standardized_errors"]


[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/app, $MYPY_CONFIG_FILE_DIR/typing"
files = "./app"
# Exclude django files
exclude = [
    "app/.*/migrations/[0-9]{4}_.*.py$",
    "app/manage.py",
]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
show_error_codes = true
# Be more strict
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# Warn everyhing
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "app.settings"


[tool.coverage.run]
source = ["./app"]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING",
    "@overload",
    "NotImplementedError",
]
omit = [
    "./app/manage.py",
    "./app/app/asgi.py",
    "./app/app/wsgi.py",
]

[tool.coverage.html]
directory = "./coverage"
