[project]
name = "Django-Rest-Framework-Boilerplate"
version = "0.0.1"
requires-python = "== 3.14.0"
readme = "README.md"
dependencies = []

[dependency-groups]
boilerplate = [
    "Django==5.2.8",
    "psycopg2==2.9.11",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-standardized-errors[openapi]==0.15.0",
    "drf-spectacular[sidecar]==0.29.0",
    "django-constance==4.3.4",
]
boilerplate-dev = [
    # Linting
    "ruff==0.14.5",
    "mypy==1.18.2",
    # Type hint stubs
    "django-stubs==5.2.7",
    "djangorestframework-stubs==3.16.5",
    # Testing
    "pytest==9.0.1",
    "pytest-subtests==0.15.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pytest-django==4.11.1",
]
boilerplate-prod = [
    "gunicorn==26.0.0",
    "supervisor==4.3.0"
]
dev = []


[tool.uv]
default-groups = ["boilerplate", "boilerplate-dev", "dev"]


[tool.ruff]
cache-dir = "/dev/null"
exclude=[
    "./**/migrations/[0-9][0-9][0-9][0-9]_*.py",
    "./manage.py",
]
line-length = 119

[tool.ruff.lint]
select = ["F", "I", "B"]

[tool.ruff.lint.isort]
extra-standard-library = ["requests"]
section-order = [
    "future",
    "standard-library",
    "django",
    "addons",
    "third-party",
    "first-party",
    "local-folder",
]
no-lines-before = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "addons",
    "first-party",
    "local-folder",
]

lines-after-imports = 2
lines-between-types = 0

[tool.ruff.lint.isort.sections]
django = ["django", "rest_framework"]
addons = [
    "rest_framework_simplejwt",
    "drf_spectacular",
    "drf_standardized_errors",
    "constance",
]


[tool.mypy]
cache_dir = "/dev/null"
mypy_path = "$MYPY_CONFIG_FILE_DIR, /typing"
files = "."
# Exclude django files
exclude = [
    "^.*/migrations/[0-9]{4}_.*.py$",
    "^manage.py$",
]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
show_error_codes = true
# Be more strict
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# Warn everything
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "app.settings"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
addopts = "--cov=. --cov-report html"


[tool.coverage.run]
source = ["."]
data_file = "/.coverage"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING",
    "@overload",
    "NotImplementedError",
]
omit = [
    "./manage.py",
    "./app/asgi.py",
    "./app/wsgi.py",
    "./core/management/commands/_base_command.py",
    "*/tests/__init__.py",
]

[tool.coverage.html]
directory = "/coverage"
